@@ -1,3 +1,9 @@
+version <unreleased>
+
+Extractors
++ [cbslocal] Recognize New York site (#11285)
+
+
 version 2016.11.22
 
 Extractors
